# lambda-vvcore

./: .gitignore  README.md  cdk.json  package-lock.json  package.json
lambda-vvcore/: .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  entry.sh  test_api.sh
lambda-vvcore/src/: main.rs  voicevox_wrapper.rs
lib/: lambda-vvcore-stack.ts
test/: lambda-vvcore.test.ts
